--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/glu16/2800-202310-BBY01/issues"
   },
-  "homepage": "https://github.com/glu16/2800-202310-BBY01#readme"
+  "homepage": "https://github.com/glu16/2800-202310-BBY01#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
