--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/glu16/2800-202310-BBY01#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "open": "^9.1.0"
-  }
+    "open": "^9.1.0",
+    "openai": "^3.2.1"
+  },
+  "keywords": []
 }
