--- a/package.json
+++ b/package.json
@@ -1,28 +1,39 @@
 {
   "name": "2800-202310-bby01",
-  "version": "1.0.0",
-  "description": "COMP2800 BBY-01 Project",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js --chrome"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/glu16/2800-202310-BBY01.git"
-  },
-  "type": "module",
-  "author": "BBY-01",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/glu16/2800-202310-BBY01/issues"
-  },
-  "homepage": "https://github.com/glu16/2800-202310-BBY01#readme",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "open": "^9.1.0",
-    "openai": "^3.2.1"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.0",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4"
   },
-  "keywords": []
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
