--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "joi": "^17.9.2",
-    "mongodb": "^5.3.0"
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.1.0"
   }
 }
