--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
-    "mongoose": "^7.1.0"
+    "mongoose": "^7.1.0",
+    "openai": "^3.2.1"
   }
 }
