--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "react-animated-text": "^0.1.4",
+    "react-step-progress-bar": "^1.0.3",
     "react-typist": "^2.0.5",
     "sass": "^1.62.1"
   }
