--- a/package.json
+++ b/package.json
@@ -4,6 +4,31 @@
     "react-router-dom": "^6.11.1",
     "react-step-progress-bar": "^1.0.3",
     "react-typist": "^2.0.5",
-    "sass": "^1.62.1"
-  }
+    "sass": "^1.62.1",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "connect-mongo": "^5.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "joi": "^17.9.2",
+    "joi-password-complexity": "^5.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.1.0",
+    "morgan": "^1.10.0",
+    "openai": "^3.2.1"
+  },
+  "name": "2800-202310-bby01",
+  "description": "<h1 align=\"center\"> Healthify </h1> \r <div align=\"center\">\r   <a align=\"center\" href=\"https://github.com/glu16/2800-202310-BBY01\"></a>\r </div>",
+  "version": "1.0.0",
+  "main": "./server/index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cd ./server && node index.js"
+  },
+  "author": "",
+  "license": "ISC"
 }
