--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fullcalendar/daygrid": "^6.1.6",
+    "@fullcalendar/core": "^6.1.7",
+    "@fullcalendar/daygrid": "^6.1.7",
     "@fullcalendar/react": "^6.1.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -11,10 +12,10 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-step-progress-bar": "^1.0.3",
     "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
     "react-spring": "^9.7.1",
+    "react-step-progress-bar": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
