--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "name": "2800-202310-bby01",
   "description": "<h1 align=\"center\"> Healthify </h1> \r <div align=\"center\">\r   <a align=\"center\" href=\"https://github.com/glu16/2800-202310-BBY01\"></a>\r </div>",
   "version": "1.0.0",
-  "main": "./server/index.js",
+  "main": "./server/server.js",
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd ./server && node index.js"
+    "start": "cd ./server && node server.js"
   },
   "author": "",
   "license": "ISC"
