--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm i",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
