--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
-    "openai": "^3.2.1"
+    "nodemailer": "^6.9.2",
+    "openai": "^3.2.1",
+    "uuid": "^9.0.0"
   }
 }
