--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-animated-text": "^0.1.4",
     "react-bootstrap": "^2.7.4",
     "react-router-dom": "^6.11.1",
+    "react-spring": "^9.7.1",
     "react-step-progress-bar": "^1.0.3",
     "react-typed": "^1.2.0",
     "react-typist": "^2.0.5",
