--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "fortawesome": "^0.0.1-security",
     "joi": "^17.9.2",
     "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
@@ -17,6 +18,7 @@
     "openai": "^3.2.1",
     "react-animated-text": "^0.1.4",
     "react-bootstrap": "^2.7.4",
+    "react-fontawesome": "^1.7.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.1",
     "react-step-progress-bar": "^1.0.3",
