--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.2",
     "openai": "^3.2.1"
   }
 }
