Updated vercel.json and added cron.js to server folder

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -14,5 +14,11 @@
   ],
   "github": {
     "silent": true
-  }
+  },
+  "crons": [
+    {
+      "path": "/api/cron",
+      "schedule": "0 10 * * *"
+    }
+  ]
 }
