Added updateStreaks.js to server folder and updated the cron config in vercel.json

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,20 +1,28 @@
 {
-"version": 2,
-"builds": [
+  "version": 2,
+  "builds": [
     {
-        "src":"server.js",
-        "use": "@vercel/node"
-    },
-    {
-        "github": {
-            "silent": true
-        }
+      "src": "server.js",
+      "use": "@vercel/node"
     }
-],
-"routes": [
+  ],
+  "routes": [
     {
-        "src": "/(.*)",
-        "dest": "server.js"
+      "src": "/(.*)",
+      "dest": "server.js"
     }
-]
+  ],
+  "github": {
+    "silent": true
+  },
+  "cron": {
+    "version": 1,
+    "jobs": [
+      {
+        "name": "updateStreaks",
+        "command": "node updateStreaks.js",
+        "schedule": "0 0 * * *"
+      }
+    ]
+  }
 }
