Updated cron version from 1 to 2 in vercel.json file

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -16,7 +16,13 @@
     "silent": true
   },
   "cron": {
-    "version": 1,
+    "version": 2,
+    "builds": [
+      {
+        "src": "updateStreaks.js",
+        "use": "@vercel/node"
+      }
+    ],
     "jobs": [
       {
         "name": "updateStreaks",
