--- a/server/vercel.json
+++ b/server/vercel.json
@@ -14,5 +14,16 @@
   ],
   "github": {
     "silent": true
-  }
+  },
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }
+      ]
+    }
+  ]
 }
