--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,14 +8,13 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
+      "source": "/api/(.*)",
       "headers": {
         "Access-Control-Allow-Credentials": "true",
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, OPTIONS, PATCH, DELETE, POST, PUT",
         "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
-      },
-      "dest": "https://healthify-server.vercel.app/api/$1"
+      }
     }
   ],
   "github": {
