--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,7 +8,7 @@
   ],
   "routes": [
     {
-      "source": "/api/(.*)",
+      "src": "/api/(.*)",
       "headers": {
         "Access-Control-Allow-Credentials": "true",
         "Access-Control-Allow-Origin": "*",
