--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,6 +9,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
+      "dest": "server.js",
       "headers": {
         "Access-Control-Allow-Credentials": "true",
         "Access-Control-Allow-Origin": "*",
